manifests/hetzner/espocrm/deployment-espocrm-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-daemon
  labels:
    app: espocrm-daemon
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: espocrm-daemon
  template:
    metadata:
      labels:
        app: espocrm-daemon
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - espocrm-espocrm
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: espocrm
        image: espocrm/espocrm:latest  # Overridden
        command:
        - sh
        - -c
        - /usr/local/bin/docker-daemon.sh
        resources:
          limits:
            memory: 384Mi
          requests:
            memory: 128Mi
        volumeMounts:
        - name: espocrm-www
          mountPath: /var/www/html
      volumes:
      - name: espocrm-www
        persistentVolumeClaim:
          claimName: espocrm-www
