manifests/hetzner/espocrm/deployment-espocrm-espocrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-espocrm
  labels:
    app: espocrm-espocrm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: espocrm-espocrm
  template:
    metadata:
      labels:
        app: espocrm-espocrm
    spec:
      containers:
      - name: espocrm
        image: espocrm/espocrm:latest # Overridden
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - name: espocrm-www
          mountPath: /var/www/html
      volumes:
      - name: espocrm-www
        persistentVolumeClaim:
          claimName: espocrm-www
