manifests/hetzner/espocrm/service-espocrm-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: espocrm-websocket
  labels:
    app: espocrm-websocket
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: espocrm-websocket
  type: ClusterIP
