manifests/hetzner/espocrm/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: espocrm-postgres
spec:
  clusterIP: None
  selector:
    app: espocrm-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
