manifests/hetzner/espocrm/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: espocrm
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: crm.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: espocrm-tls
        namespace: espocrm
