manifests/hetzner/espocrm/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: espocrm-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: espocrm
  hostnames:
  - crm.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ws
    backendRefs:
    - group: ""
      kind: Service
      name: espocrm-websocket
      port: 8080
      weight: 1
  # espocrm
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: espocrm-espocrm
      port: 8080
      weight: 1
